--- a/mekafiletest.ioc
+++ b/mekafiletest.ioc
@@ -3,21 +3,24 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103CBT6
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=USART2
+Mcu.IPNb=4
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA5
-Mcu.Pin1=PA13
-Mcu.Pin2=PA14
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin2=PA5
+Mcu.Pin3=PA13
+Mcu.Pin4=PA14
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -38,6 +41,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=BUILTIN_LED
 PA5.Locked=true
@@ -81,6 +88,8 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMC
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
