--- a/big/big.ioc
+++ b/big/big.ioc
@@ -3,7 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103CBT6
 Mcu.Family=STM32F1
@@ -13,10 +13,11 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PA13
-Mcu.Pin1=PA14
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.PinsNb=3
+Mcu.Pin0=PB12
+Mcu.Pin1=PA13
+Mcu.Pin2=PA14
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -37,6 +38,12 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB12.GPIO_Label=LED
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB12.GPIO_PuPd=GPIO_NOPULL
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
