--- a/big/big.ioc
+++ b/big/big.ioc
@@ -3,15 +3,15 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
+GPIO.groupedBy=
 KeepUserPlacement=false
-Mcu.CPN=STM32F103CBT6
+Mcu.CPN=STM32F103C6T6A
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IPNb=3
-Mcu.Name=STM32F103C(8-B)Tx
+Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PB12
 Mcu.Pin1=PA13
@@ -20,7 +20,7 @@ Mcu.Pin3=VP_SYS_VS_Systick
 Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32F103CBTx
+Mcu.UserName=STM32F103C6Tx
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -38,11 +38,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PB12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB12.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP,GPIO_PuPd
 PB12.GPIO_Label=LED
 PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB12.GPIO_PuPd=GPIO_NOPULL
-PB12.Locked=true
 PB12.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -53,7 +52,7 @@ ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F103CBTx
+ProjectManager.DeviceId=STM32F103C6Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.5
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=true
