--- a/small/small.ioc
+++ b/small/small.ioc
@@ -78,7 +78,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.FamilyName=M
 RCC.HSICECFreq_Value=32786.88524590164
@@ -87,7 +87,8 @@ RCC.PLLCLKFreq_Value=16000000
 RCC.TimSysFreq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
 USART2.BaudRate=115200
-USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,OverSampling
+USART2.OverSampling=UART_OVERSAMPLING_16
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_PINREMAP.Mode=PINREMAP
 VP_SYS_VS_PINREMAP.Signal=SYS_VS_PINREMAP
