--- a/big/big.ioc
+++ b/big/big.ioc
@@ -48,13 +48,13 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.Mode=NSS_Signal_Hard_Input
+PA4.Mode=NSS_Signal_Hard_Output
 PA4.Signal=SPI1_NSS
-PA5.Mode=Full_Duplex_Slave
+PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Slave
+PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Slave
+PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -102,11 +102,13 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMC
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=1000.0 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,VirtualNSS
-SPI1.Mode=SPI_MODE_SLAVE
+SPI1.IPParameters=VirtualType,Mode,Direction,VirtualNSS,CalculateBaudRate,BaudRatePrescaler
+SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
-SPI1.VirtualType=VM_SLAVE
+SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
