--- a/small/small.ioc
+++ b/small/small.ioc
@@ -46,13 +46,13 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Mode=NSS_Signal_Hard_Output
+PA4.Mode=NSS_Signal_Hard_Input
 PA4.Signal=SPI1_NSS
-PA5.Mode=Full_Duplex_Master
+PA5.Mode=Full_Duplex_Slave
 PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
+PA6.Mode=Full_Duplex_Slave
 PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
+PA7.Mode=Full_Duplex_Slave
 PA7.Signal=SPI1_MOSI
 PB1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB1.GPIO_Label=LED
@@ -99,15 +99,13 @@ RCC.IPParameters=CECFreq_Value,FamilyName,HSICECFreq_Value,PLLCLKFreq_Value,TimS
 RCC.PLLCLKFreq_Value=16000000
 RCC.TimSysFreq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=1000.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,CRCCalculation,VirtualNSS,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
+SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,CRCCalculation,VirtualNSS
+SPI1.Mode=SPI_MODE_SLAVE
 SPI1.VirtualNSS=VM_NSSHARD
-SPI1.VirtualType=VM_MASTER
+SPI1.VirtualType=VM_SLAVE
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,OverSampling
 USART2.OverSampling=UART_OVERSAMPLING_16
