Tried to set up SPI DMA with periodick check, but failed.

--- a/small/small.ioc
+++ b/small/small.ioc
@@ -3,7 +3,8 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 Dma.Request0=SPI1_RX
-Dma.RequestsNb=1
+Dma.Request1=TIM1_CH3/UP
+Dma.RequestsNb=2
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.Instance=DMA1_Channel2
 Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -13,6 +14,15 @@ Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM1_CH3/UP.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM1_CH3/UP.1.Instance=DMA1_Channel5
+Dma.TIM1_CH3/UP.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.TIM1_CH3/UP.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH3/UP.1.Mode=DMA_NORMAL
+Dma.TIM1_CH3/UP.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.TIM1_CH3/UP.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH3/UP.1.Priority=DMA_PRIORITY_HIGH
+Dma.TIM1_CH3/UP.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
@@ -23,12 +33,15 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM1
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F042F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
+Mcu.Pin10=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM1_VS_no_output3
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
@@ -37,13 +50,14 @@ Mcu.Pin6=PA13
 Mcu.Pin7=PA14
 Mcu.Pin8=VP_SYS_VS_PINREMAP
 Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F4Px
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel4_5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -102,7 +116,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.FamilyName=M
 RCC.HSICECFreq_Value=32786.88524590164
@@ -116,6 +130,10 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,CRCCalculation
 SPI1.Mode=SPI_MODE_SLAVE
 SPI1.VirtualType=VM_SLAVE
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-Output\ Compare3\ No\ Output=TIM_CHANNEL_3
+TIM1.IPParameters=Channel-Output Compare3 No Output,AutoReloadPreload,Period
+TIM1.Period=128
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,OverSampling
 USART2.OverSampling=UART_OVERSAMPLING_16
@@ -124,4 +142,8 @@ VP_SYS_VS_PINREMAP.Mode=PINREMAP
 VP_SYS_VS_PINREMAP.Signal=SYS_VS_PINREMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_no_output3.Mode=Output Compare3 No Output
+VP_TIM1_VS_no_output3.Signal=TIM1_VS_no_output3
 board=custom
