--- a/small/small.ioc
+++ b/small/small.ioc
@@ -4,7 +4,9 @@ CAD.pinconfig=
 CAD.provider=
 Dma.Request0=SPI1_RX
 Dma.Request1=TIM1_CH3/UP
-Dma.RequestsNb=2
+Dma.Request2=TIM1_CH4/TRIG/COM
+Dma.Request3=SPI1_TX
+Dma.RequestsNb=4
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.Instance=DMA1_Channel2
 Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -14,15 +16,33 @@ Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.SPI1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.3.Instance=DMA1_Channel3
+Dma.SPI1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.3.Mode=DMA_NORMAL
+Dma.SPI1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.TIM1_CH3/UP.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.TIM1_CH3/UP.1.Instance=DMA1_Channel5
-Dma.TIM1_CH3/UP.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.TIM1_CH3/UP.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.TIM1_CH3/UP.1.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH3/UP.1.Mode=DMA_NORMAL
-Dma.TIM1_CH3/UP.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.TIM1_CH3/UP.1.Mode=DMA_CIRCULAR
+Dma.TIM1_CH3/UP.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.TIM1_CH3/UP.1.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH3/UP.1.Priority=DMA_PRIORITY_HIGH
+Dma.TIM1_CH3/UP.1.Priority=DMA_PRIORITY_LOW
 Dma.TIM1_CH3/UP.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM1_CH4/TRIG/COM.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM1_CH4/TRIG/COM.2.Instance=DMA1_Channel4
+Dma.TIM1_CH4/TRIG/COM.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH4/TRIG/COM.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH4/TRIG/COM.2.Mode=DMA_CIRCULAR
+Dma.TIM1_CH4/TRIG/COM.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH4/TRIG/COM.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH4/TRIG/COM.2.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH4/TRIG/COM.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
@@ -65,6 +85,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
@@ -132,8 +155,9 @@ SPI1.Mode=SPI_MODE_SLAVE
 SPI1.VirtualType=VM_SLAVE
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-Output\ Compare3\ No\ Output=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-Output Compare3 No Output,AutoReloadPreload,Period
+TIM1.IPParameters=Channel-Output Compare3 No Output,AutoReloadPreload,Period,Prescaler
 TIM1.Period=128
+TIM1.Prescaler=0
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,OverSampling
 USART2.OverSampling=UART_OVERSAMPLING_16
