--- a/small/small.ioc
+++ b/small/small.ioc
@@ -29,15 +29,14 @@ Mcu.Name=STM32F042F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin2=PA4
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB1
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin2=PA5
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PB1
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F4Px
@@ -60,8 +59,6 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Mode=NSS_Signal_Hard_Input
-PA4.Signal=SPI1_NSS
 PA5.Mode=Full_Duplex_Slave
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Slave
@@ -115,9 +112,8 @@ RCC.TimSysFreq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,VirtualNSS,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,DataSize
 SPI1.Mode=SPI_MODE_SLAVE
-SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_SLAVE
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,OverSampling
