--- a/small/small.ioc
+++ b/small/small.ioc
@@ -2,19 +2,19 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=USART2_RX
+Dma.Request0=SPI1_RX
 Dma.RequestsNb=1
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.Instance=DMA1_Channel5
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_CIRCULAR
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.0.Instance=DMA1_Channel2
+Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.0.Mode=DMA_CIRCULAR
+Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F042F4P6
 Mcu.Family=STM32F0
@@ -29,26 +29,25 @@ Mcu.Name=STM32F042F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin2=PA4
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB1
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin2=PA5
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PB1
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F4Px
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
-NVIC.DMA1_Channel4_5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel2_3_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SPI1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -60,8 +59,6 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Mode=NSS_Signal_Hard_Input
-PA4.Signal=SPI1_NSS
 PA5.Mode=Full_Duplex_Slave
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Slave
@@ -116,9 +113,8 @@ RCC.VCOOutput2Freq_Value=8000000
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,CRCCalculation,VirtualNSS
+SPI1.IPParameters=VirtualType,Mode,Direction,DataSize,CRCCalculation
 SPI1.Mode=SPI_MODE_SLAVE
-SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_SLAVE
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,OverSampling
