--- a/big/big.ioc
+++ b/big/big.ioc
@@ -2,29 +2,17 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=SPI1_TX
-Dma.RequestsNb=1
-Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.0.Instance=DMA1_Channel3
-Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.0.Mode=DMA_CIRCULAR
-Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C6T6A
 Mcu.Family=STM32F1
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA5
@@ -43,7 +31,6 @@ Mcu.UserName=STM32F103C6Tx
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -106,7 +93,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.DATA_CACHE_ENABLE=0
@@ -116,9 +103,9 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,DATA_CACHE_ENABLE,FamilyName,INST
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=31.25 KBits/s
+SPI1.CalculateBaudRate=1000.0 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CRCCalculation,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
