--- a/small/small.ioc
+++ b/small/small.ioc
@@ -2,29 +2,17 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=SPI1_RX
-Dma.RequestsNb=1
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.Instance=DMA1_Channel2
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_CIRCULAR
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F042F4P6
 Mcu.Family=STM32F0
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F042F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA2
@@ -42,7 +30,6 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F042F4Px
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
-NVIC.DMA1_Channel2_3_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -102,7 +89,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.FamilyName=M
 RCC.HSICECFreq_Value=32786.88524590164
